# waves

./: .gitignore  CMakeLists.txt  Makefile  README.md  main  waves-git.kdev4  waves.kdev4
.kdev4/: waves-git.kdev4
include/: constants.h  globals.h  graphics.h  waves.h  wmath.h
src/: customdata.h  graphics.c  graphics.h  main.c  waves.c  wmath.c
src/waves/: graphics.c  graphics.h  main.c  task.unused_c
